add update user api and add id in all join query
